Optimize for SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Authority | Frontend Developer | Crafting sleek web experiences">
+    <meta name="keyword" content="oladapo authority, web developer, frontend developer, dev author, portfolio" />
     <title>Dev-Author</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Oladapo Authority",
+        "jobTitle": "Frontend Developer",
+        "image": "htpps://dev-author.netlify.app/images/profile.jpg",
+        "url": "htpps://dev-author.netlify.app"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
